log.log
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
python: can't open file '/code/manage.py': [Errno 2] No such file or directory
Watching for file changes with StatReloader
Invalid HTTP_HOST header: 'cactuar.commemabite.fr:4242'. You may need to add 'cactuar.commemabite.fr' to ALLOWED_HOSTS.
Bad Request: /
[03/Feb/2022 13:21:42] "GET / HTTP/1.1" 400 66694
Invalid HTTP_HOST header: 'cactuar.commemabite.fr:4242'. You may need to add 'cactuar.commemabite.fr' to ALLOWED_HOSTS.
Bad Request: /favicon.ico
[03/Feb/2022 13:21:44] "GET /favicon.ico HTTP/1.1" 400 66771
Traceback (most recent call last):
  File "/code/manage.py", line 22, in <module>
    main()
  File "/code/manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "/usr/local/lib/python3.10/site-packages/django/core/management/__init__.py", line 425, in execute_from_command_line
    utility.execute()
  File "/usr/local/lib/python3.10/site-packages/django/core/management/__init__.py", line 369, in execute
    settings.INSTALLED_APPS
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 84, in __getattr__
    self._setup(name)
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 71, in _setup
    self._wrapped = Settings(settings_module)
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 179, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
  File "/usr/local/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/code/geospace/settings.py", line 28
    ALLOWED_HOSTS = [*]
                      ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/code/manage.py", line 22, in <module>
    main()
  File "/code/manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "/usr/local/lib/python3.10/site-packages/django/core/management/__init__.py", line 425, in execute_from_command_line
    utility.execute()
  File "/usr/local/lib/python3.10/site-packages/django/core/management/__init__.py", line 369, in execute
    settings.INSTALLED_APPS
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 84, in __getattr__
    self._setup(name)
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 71, in _setup
    self._wrapped = Settings(settings_module)
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 179, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
  File "/usr/local/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/code/geospace/settings.py", line 28
    ALLOWED_HOSTS = [*]
                      ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/code/manage.py", line 22, in <module>
    main()
  File "/code/manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "/usr/local/lib/python3.10/site-packages/django/core/management/__init__.py", line 425, in execute_from_command_line
    utility.execute()
  File "/usr/local/lib/python3.10/site-packages/django/core/management/__init__.py", line 369, in execute
    settings.INSTALLED_APPS
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 84, in __getattr__
    self._setup(name)
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 71, in _setup
    self._wrapped = Settings(settings_module)
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 179, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
  File "/usr/local/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/code/geospace/settings.py", line 28
    ALLOWED_HOSTS = [*]
                      ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/code/manage.py", line 22, in <module>
    main()
  File "/code/manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "/usr/local/lib/python3.10/site-packages/django/core/management/__init__.py", line 425, in execute_from_command_line
    utility.execute()
  File "/usr/local/lib/python3.10/site-packages/django/core/management/__init__.py", line 369, in execute
    settings.INSTALLED_APPS
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 84, in __getattr__
    self._setup(name)
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 71, in _setup
    self._wrapped = Settings(settings_module)
  File "/usr/local/lib/python3.10/site-packages/django/conf/__init__.py", line 179, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
  File "/usr/local/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/code/geospace/settings.py", line 28
    ALLOWED_HOSTS = [*]
                      ^
SyntaxError: invalid syntax
Watching for file changes with StatReloader
[03/Feb/2022 13:23:17] "GET / HTTP/1.1" 200 10697
[03/Feb/2022 13:23:18] "GET /static/admin/css/fonts.css HTTP/1.1" 200 423
[03/Feb/2022 13:23:18] "GET /static/admin/fonts/Roboto-Regular-webfont.woff HTTP/1.1" 200 85876
[03/Feb/2022 13:23:19] "GET /static/admin/fonts/Roboto-Bold-webfont.woff HTTP/1.1" 200 86184
[03/Feb/2022 13:23:19] "GET /static/admin/fonts/Roboto-Light-webfont.woff HTTP/1.1" 200 85692
